--- a/resources/lang/en/WebIndexLoginRegister.properties
+++ b/resources/lang/en/WebIndexLoginRegister.properties
@@ -5,3 +5,4 @@ rememberMe="Remember Me"
 forgottenPassword="Forgotten passward"
 register="Register"
 confirmPassword="Confirm Password"
+loginRegister="Login Register"
