--- a/resources/lang/en/WebIndexProduct.properties
+++ b/resources/lang/en/WebIndexProduct.properties
@@ -1,3 +1,3 @@
-quantity="数量"
-add_to_cart="添加到购物车"
-add_to_wishlist="添加到愿望清单"
+quantity="Quantity"
+add_to_cart="Add To Cart"
+add_to_wishlist="Add To WishList"
