--- a/resources/lang/de/ApiIndex.properties
+++ b/resources/lang/de/ApiIndex.properties
@@ -1,5 +1,5 @@
-registerEmailExist="ÓÊÏäÒÑ×¢²á¹ıÁË"
-registerSuccess="×¢²á³É¹¦"
-registerEmailOrPasswordError="ÓÊÏä»òÕßÃÜÂë²»ÄÜÎª¿Õ"
-loginSuccess="µÇÂ¼³É¹¦"
-loginEmailOrPasswordError="ÓÊÏä»òÃÜÂë´íÎó"
+registerEmailExist="é‚®ç®±å·²å­˜åœ¨"
+registerSuccess="æ³¨å†ŒæˆåŠŸ"
+registerEmailOrPasswordError="é‚®ç®±æˆ–è€…å¯†ç ä¸èƒ½ä¸ºç©º"
+loginSuccess="ç™»å½•æˆåŠŸ"
+loginEmailOrPasswordError="è´¦å·æˆ–å¯†ç é”™è¯¯"
