--- a/resources/lang/en/Common.properties
+++ b/resources/lang/en/Common.properties
@@ -2,3 +2,5 @@ home="Home"
 contact="Contact"
 moreCategories="More Categories"
 browseCategories="Browse Categories"
+my_cart="My Cart"
+wishlist="Wishlist"
