--- a/resources/lang/en/WebIndexProduct.properties
+++ b/resources/lang/en/WebIndexProduct.properties
@@ -1,3 +1,8 @@
 quantity="Quantity"
 add_to_cart="Add To Cart"
 add_to_wishlist="Add To WishList"
+remove_from_wishlist="Remove From Wishlist"
+add_to_cart_success="添加购物车成功"
+add_to_cart_failed="添加购物车失败"
+add_to_wishlist_success="添加愿望清单成功"
+add_to_wishlist_failed="添加愿望清单失败"
