--- a/resources/lang/en/Common.properties
+++ b/resources/lang/en/Common.properties
@@ -1,6 +1,9 @@
-home="Home"
-contact="Contact"
-moreCategories="More Categories"
-browseCategories="Browse Categories"
-my_cart="My Cart"
-wishlist="Wishlist"
+home="主页"
+contact="联系我们"
+moreCategories="更多分类"
+browseCategories="浏览分类"
+my_cart="购物车"
+wishlist="愿望清单"
+view_cart="购物车"
+checkout="结算"
+
