--- a/resources/lang/en/WebAccountCart.properties
+++ b/resources/lang/en/WebAccountCart.properties
@@ -2,3 +2,17 @@ cart="购物车"
 discount_coupon_code="Discount Coupon Code"
 coupon_code="Coupon Code"
 apply_code="Apply Code"
+image="图像"
+product="名称"
+price="价格"
+quantity="数量"
+total="累计"
+remove="删除"
+vat="增值税"
+cart_summary="Cart Summary"
+sub_total="Sub Total"
+shipping_cost="Shipping Cost "
+grand_total="Grand Total"
+checkout="Checkout"
+update_cart="Update Cart"
+
