--- a/resources/lang/en/WebAccountCart.properties
+++ b/resources/lang/en/WebAccountCart.properties
@@ -15,4 +15,5 @@ shipping_cost="Shipping Cost "
 grand_total="Grand Total"
 checkout="Checkout"
 update_cart="Update Cart"
+coupon_not_avaliable="优惠码不可用"
 
