--- a/resources/lang/en/WebAccountCart.properties
+++ b/resources/lang/en/WebAccountCart.properties
@@ -16,4 +16,7 @@ grand_total="Grand Total"
 checkout="Checkout"
 update_cart="Update Cart"
 coupon_not_avaliable="优惠码不可用"
+shopping_basket="Shopping Basket"
+basket_empty_desc="You have no items in your shopping basket."
+continue_shopping="Continue shopping"
 
