--- a/resources/lang/en/WebIndexLoginRegister.properties
+++ b/resources/lang/en/WebIndexLoginRegister.properties
@@ -6,3 +6,6 @@ forgottenPassword="Forgotten passward"
 register="Register"
 confirmPassword="Confirm Password"
 loginRegister="Login Register"
+emailUsed="邮箱账户已注册过了"
+emailOrPasswordError="邮箱或密码错误"
+RepasswordError="两次输入的密码不一致"
