--- a/resources/lang/en/WebAccountIndex.properties
+++ b/resources/lang/en/WebAccountIndex.properties
@@ -1,6 +1,6 @@
-account="My Account"
-orders="Orders"
-address="Address"
-logout="Logout"
+account="我的账户"
+orders="订单"
+address="地址"
+logout="注销"
 view="View"
 mobile="Mobile"
