--- a/resources/lang/en/WebAccountCart.properties
+++ b/resources/lang/en/WebAccountCart.properties
@@ -1,7 +1,7 @@
 cart="购物车"
-discount_coupon_code="Discount Coupon Code"
-coupon_code="Coupon Code"
-apply_code="Apply Code"
+discount_coupon_code="优惠码"
+coupon_code="优惠码"
+apply_code="使用优惠码"
 image="图像"
 product="名称"
 price="价格"
@@ -9,14 +9,14 @@ quantity="数量"
 total="累计"
 remove="删除"
 vat="增值税"
-cart_summary="Cart Summary"
-sub_total="Sub Total"
-shipping_cost="Shipping Cost "
-grand_total="Grand Total"
-checkout="Checkout"
-update_cart="Update Cart"
+cart_summary="汇总"
+sub_total="小结"
+shipping_cost="配送费 "
+grand_total="总计"
+checkout="就是那"
+update_cart="更新购物车"
 coupon_not_avaliable="优惠码不可用"
-shopping_basket="Shopping Basket"
-basket_empty_desc="You have no items in your shopping basket."
-continue_shopping="Continue shopping"
+shopping_basket="购物车"
+basket_empty_desc="购物车是空的."
+continue_shopping="继续购物"
 
