--- a/resources/lang/en/WebIndexProductListCategory.properties
+++ b/resources/lang/en/WebIndexProductListCategory.properties
@@ -1,4 +1,4 @@
-previous="Previous"
-next="Next"
-add_to_cart="Add to Cart"
-share_this_product="share this product"
+previous="上一页"
+next="下一页"
+add_to_cart="添加到购物车"
+share_this_product="分享商品"
