--- a/resources/lang/en/ApiIndex.properties
+++ b/resources/lang/en/ApiIndex.properties
@@ -1,5 +1,5 @@
-registerEmailExist="邮箱已存在"
-registerSuccess="注册成功"
-registerEmailOrPasswordError="邮箱或者密码不能为空"
-loginSuccess="登录成功"
-loginEmailOrPasswordError="账号或密码错误"
+registerEmailExist="the email already exists"
+registerSuccess="registration was successful"
+registerEmailOrPasswordError="email or password cannot be empty"
+loginSuccess="login successful"
+loginEmailOrPasswordError="username or password incorrect"
