--- a/resources/lang/en/WebAccountWishlist.properties
+++ b/resources/lang/en/WebAccountWishlist.properties
@@ -1,10 +1,10 @@
-wishlist="愿望单"
-image="图像"
-product="名称"
-price="价格"
-quantity="数量"
-total="累计"
-remove="删除"
-vat="增值税"
-wishlist_empty_desc="愿望清单还是空的"
-continue="去添加"
+wishlist="Wishlist"
+image="Image"
+product="Name"
+price="Price"
+quantity="Quantity"
+total="Total"
+remove="Remove"
+vat="VAT"
+wishlist_empty_desc="Wishlist is still empty"
+continue="Add"
