--- a/resources/lang/en/WebIndexLoginRegister.properties
+++ b/resources/lang/en/WebIndexLoginRegister.properties
@@ -1,11 +1,11 @@
-login="登录"
-emailAddress="邮箱地址"
-password="密码"
-rememberMe="记住我"
-forgottenPassword="忘记密码"
-register="注册"
-confirmPassword="确认密码"
-loginRegister="登录/注册"
-emailUsed="邮箱账户已注册过了"
-emailOrPasswordError="邮箱或密码错误"
-RepasswordError="两次输入的密码不一致"
+login="Login"
+emailAddress="email address"
+password="password"
+rememberMe="remember me"
+forgottenPassword="forget password"
+register="register"
+confirmPassword="confirm password"
+loginRegister="login/register"
+emailUsed="Email account has been registered"
+emailOrPasswordError="Mail or password is incorrect"
+RepasswordError="two passwords are inconsistent"
