--- a/resources/lang/en/WebIndexProduct.properties
+++ b/resources/lang/en/WebIndexProduct.properties
@@ -1,8 +1,8 @@
-quantity="数量"
-add_to_cart="添加到购物车"
-add_to_wishlist="添加到愿望单"
-remove_from_wishlist="从愿望单中移除"
-add_to_cart_success="添加购物车成功"
-add_to_cart_failed="添加购物车失败"
-add_to_wishlist_success="添加愿望清单成功"
-add_to_wishlist_failed="添加愿望清单失败"
+quantity="Quantity"
+add_to_cart="Add to cart"
+add_to_wishlist="Add to wishlist"
+remove_from_wishlist="Remove from wishlist"
+add_to_cart_success="Add cart successfully"
+add_to_cart_failed="Add to Cart failed"
+add_to_wishlist_success="Successfully added wishlist"
+add_to_wishlist_failed="Failed to add wishlist"
