--- a/resources/lang/zh/WebIndexIndex.properties
+++ b/resources/lang/zh/WebIndexIndex.properties
@@ -1,6 +1,6 @@
 read_more="Read More"
 our_blog_posts="Our <span>Blog</span> Posts"
-out_blog_posts_desc="Do you want to present posts in the best way to highlight interesting moments of your blog?"
+our_blog_posts_desc="Do you want to present posts in the best way to highlight interesting moments of your blog?"
 top_selling_products="Top <span>Selling</span> Products"
 top_selling_products_desc="Browse the collection of our top selling, You will definitely find what you are looking for."
 deals_of_the_week="Deals <span>of The</span> Week"
