--- a/resources/lang/en/WebIndexIndex.properties
+++ b/resources/lang/en/WebIndexIndex.properties
@@ -16,3 +16,5 @@ free_shipping="Free Shipping <span>Free shipping on all US order</span>"
 support="Support 24/7 <span>Contact us 24 hours a day</span>"
 return="100% Money Back <span>You have 30 days to Return</span>"
 payment="Payment Secure <span>We ensure secure payment</span>"
+popular_products="Some <span>Popular</span> Products"
+popular_products_desc="We offer the best selection furniture at prices you will love!"
