--- a/resources/lang/de/Common.properties
+++ b/resources/lang/de/Common.properties
@@ -1,15 +1,15 @@
-home="主页"
-contact="联系我们"
-moreCategories="更多分类"
-browseCategories="浏览分类"
-my_cart="购物车"
-wishlist="愿望清单"
-view_cart="购物车"
-checkout="结算"
-cart_empty="购物车是空的"
-my_account="我的账户"
-welcome="欢迎语"
-about="关于我们"
-blog="信息"
+home="Home"
+contact="Contact Us"
+moreCategories="More categories"
+browseCategories="Browse categories"
+my_cart="Cart"
+wishlist="Wishlist"
+view_cart="Cart"
+checkout="Checkout"
+cart_empty="shopping cart is empty"
+my_account="Account"
+welcome="Welcome Message"
+about="About Us"
+blog="News"
 copyright="Copyright @ 2020 MercuryLiving. All Rights Reserved"
-search_text="搜索 "
+search_text="search"
