--- a/resources/lang/de/WebAccountCart.properties
+++ b/resources/lang/de/WebAccountCart.properties
@@ -1,22 +1,22 @@
-cart="购物车"
-discount_coupon_code="优惠码"
-coupon_code="优惠码"
-apply_code="使用优惠码"
-image="图像"
-product="名称"
-price="价格"
-quantity="数量"
-total="累计"
-remove="删除"
-vat="增值税"
-cart_summary="汇总"
-sub_total="小结"
-shipping_cost="配送费 "
-grand_total="总计"
-checkout="结算"
-update_cart="更新购物车"
-coupon_not_avaliable="优惠码不可用"
-shopping_basket="购物车"
-basket_empty_desc="购物车是空的."
-continue_shopping="继续购物"
+cart="Cart"
+discount_coupon_code="Promo Code"
+coupon_code="Promo Code"
+apply_code="Apply Promo Code"
+image="Image"
+product="Name"
+price="Price"
+quantity="Quantity"
+total="Total"
+remove="Remove"
+vat="VAT"
+cart_summary="Summary"
+sub_total="Total"
+shipping_cost="Shipping "
+grand_total="Total"
+checkout="Checkout"
+update_cart="Update Cart"
+coupon_not_avaliable="coupon code is not available"
+shopping_basket="Cart"
+basket_empty_desc="shopping cart is empty."
+continue_shopping="continue shopping"
 
