--- a/resources/lang/de/WebAccountCheckout.properties
+++ b/resources/lang/de/WebAccountCheckout.properties
@@ -1,4 +1,4 @@
-checkout="结算"
-create_address_failed="创建地址失败"
-accept_terms="请先接受条款"
-choice_payment="清选择一个支付方式"
+checkout="Checkout"
+create_address_failed="Address creation failed"
+accept_terms="Please accept the terms first"
+choice_payment="Please choose a payment method"
