--- a/resources/lang/de/WebAccountIndex.properties
+++ b/resources/lang/de/WebAccountIndex.properties
@@ -1,6 +1,6 @@
-account="我的账户"
-orders="订单"
-address="地址"
-logout="注销"
+account="Account"
+orders="Orders"
+address="Address"
+logout="Logout"
 view="View"
 mobile="Mobile"
