--- a/resources/lang/it/WebIndexIndex.properties
+++ b/resources/lang/it/WebIndexIndex.properties
@@ -1,20 +1,20 @@
-read_more="Read More"
-our_blog_posts="Our <span>Blog</span> Posts"
-our_blog_posts_desc="Do you want to present posts in the best way to highlight interesting moments of your blog?"
-top_selling_products="Top <span>Selling</span> Products"
-top_selling_products_desc="Browse the collection of our top selling, You will definitely find what you are looking for."
-deals_of_the_week="Deals <span>of The</span> Week"
-deals_of_the_week_desc="Deals of the Week are a selection of fresh deals updated every week!"
-full_banner="It's your job to have the idea. It's ours to make it happen."
-full_banner_desc="We are a Melboume based furniture maker helping people bring their iadeas to life."
-all_products="View our products"
-new_collections_of_arrivals="New <span>Collections</span> Of Arrivals"
-new_collections_of_arrivals_desc="Browse the collection of our new products, You will definitely find what you are looking for."
-featured_category="Featured <span>Categories</span>"
-featured_category_desc="Show all featured categories with products on home page."
-free_shipping="Free Shipping <span>Free shipping on all US order</span>"
-support="Support 24/7 <span>Contact us 24 hours a day</span>"
-return="100% Money Back <span>You have 30 days to Return</span>"
-payment="Payment Secure <span>We ensure secure payment</span>"
-popular_products="Some <span>Popular</span> Products"
-popular_products_desc="We offer the best selection furniture at prices you will love!"
+read_more="更多"
+our_blog_posts="咨询"
+our_blog_posts_desc="你想用最好的方式来展示你博客中有趣的时刻吗？"
+top_selling_products="畅销"
+top_selling_products_desc="浏览我们最畅销的收藏品，你一定会找到你想要的。"
+deals_of_the_week="定时特惠"
+deals_of_the_week_desc="本周的优惠是每周更新的新优惠精选！"
+full_banner="你的工作就是有这个想法。这是我们的责任。"
+full_banner_desc="我们是一家总部位于梅尔博姆的家具制造商，帮助人们将他们的家庭生活。"
+all_products="查看我们的产品"
+new_collections_of_arrivals="新品上市"
+new_collections_of_arrivals_desc="浏览我们的新产品系列，你一定会找到你想要的"
+featured_category="特色 <span>分类</span>"
+featured_category_desc="在主页上显示包含产品的所有特色类别。"
+free_shipping="包邮 <span>所有订单免运费</span>"
+support="24/7 支持 <span>全天24小时支持</span>"
+return="100% 退款 <span>30天内免费退款</span>"
+payment="安全支付 <span>我们确保您支付过程中的账户安全</span>"
+popular_products="热卖"
+popular_products_desc="我们提供最好的家具选择，价格您会喜欢！"
